Added pages for each form
 - Index page to point to pages
 - JS/CSS library (form-display)

--- a/index.html
+++ b/index.html
@@ -3,519 +3,22 @@
 	<head>
 		<title>Long Form</title>
 		<link rel="stylesheet" type="text/css" href="jquery.svg.css"> 
+		<link rel="stylesheet" type="text/css" href="form-display.css"> 
 		<script src="https://code.jquery.com/jquery-1.11.3.js"></script>
 		<script type="text/javascript" src="jquery.svg.js"></script>
+		<script type="text/javascript" src="form-display.js"></script>
 	</head>
 	<body>
-		<style>
-		.button {
-		    background-color: #4CAF50; /* Green */
-		    border: none;
-		    color: white;
-		    padding: 15px 32px;
-		    text-align: center;
-		    text-decoration: none;
-		    display: inline-block;
-		    font-size: 16px;
-		    margin: 10px;
-		}
-		</style>
-		<script>
-		var id=0;
-		var squares = [ ];
-		var currentSquare = null;
-		var currentStep = 0;
-
-		var sqSize = 60;
-		var offset = 15;
-
-		var TYPE = {
-		  FLAT : {value: 0, name: "Flat", code: ""}, 
-		  HANGING_TOE: {value: 1, name: "Hanging Toe", code: "T"}, 
-		  HANGING_HEAL: {value: 2, name: "Hanging Heal", code: "H"}, 
-		  FLOATING : {value: 3, name: "Floating", code: "F"}, 
-		  fromCode: function(c) {
-		  	switch (c)
-		  	{
-		  		case TYPE.FLAT.code:         return TYPE.FLAT;
-		  		case TYPE.HANGING_TOE.code:  return TYPE.HANGING_TOE;
-		  		case TYPE.HANGING_HEAL.code: return TYPE.HANGING_HEAL;
-		  		case TYPE.FLOATING.code:     return TYPE.FLOATING;
-		  	} 
-		  	return FLAT;
-		  }
-		};
-
-		var DIR = {
-		  NONE:      {value: 0, name: "None",      code: "",   offX:  0, offY:  0, dir:   0},
-		  NORTH:     {value: 1, name: "North",     code: "N",  offX:  0, offY: -1, dir:   0},
-		  NORTHEAST: {value: 2, name: "NorthEast", code: "NE", offX:  1, offY: -1, dir:  45},
-		  EAST:      {value: 3, name: "East",      code: "E",  offX:  1, offY:  0, dir:  90},
-		  SOUTHEAST: {value: 4, name: "SouthEast", code: "SE", offX:  1, offY:  1, dir: 135},
-		  SOUTH:     {value: 5, name: "South",     code: "S",  offX:  0, offY:  1, dir: 180},
-		  SOUTHWEST: {value: 6, name: "SouthWest", code: "SW", offX: -1, offY:  1, dir: 225},
-		  WEST:      {value: 7, name: "West",      code: "W",  offX: -1, offY:  0, dir: 270},
-		  NORTHWEST: {value: 8, name: "NorthWest", code: "NW", offX: -1, offY: -1, dir: 315}, 
-		  fromCode: function(c) {
-		  	switch (c)
-		  	{
-		  		case DIR.NORTH.code:     return DIR.NORTH;
-		  		case DIR.NORTHEAST.code: return DIR.NORTHEAST;
-		  		case DIR.EAST.code:      return DIR.EAST;
-		  		case DIR.SOUTHEAST.code: return DIR.SOUTHEAST;
-		  		case DIR.SOUTH.code:     return DIR.SOUTH;
-		  		case DIR.SOUTHWEST.code: return DIR.SOUTHWEST;
-		  		case DIR.WEST.code:      return DIR.WEST;
-		  		case DIR.NORTHWEST.code: return DIR.NORTHWEST;
-		  	} 
-		  	return DIR.NONE;
-		  }
-		};
-
-
-		function copySquare(sqr)
-		{
-			return jQuery.extend({}, sqr);
-		}
-
-		/**
-		 * Foot String
-		 * Corner:DirectionPointing:Type
-		 * Corner:  in { N,E,S,W }
-		 * DirectionPointing:  in { N,NE,E,SE,S,SW,W,NW,"" }
-		 * Type:(optional == "") in { F,T,H,"" } 
-		 * Distance: (optional == 1) in { 1,0.5,2 ...}
-		 */
-		function newFoot(str)
-		{
-			var arr = str.split(":");
-			var corner = DIR.fromCode(arr[0]);
-			var dp = DIR.fromCode(arr[1]);
-			var type = (arr.length>2) ? TYPE.fromCode(arr[2]) : TYPE.FLAT;
-			var foot = {
-				x: corner.offX,
-				y: corner.offY,
-				d: dp,
-				t: type
-			}
-			return foot;
-		}
-
-		function copyFoot(foot)
-		{
-			return jQuery.extend({}, foot);
-		}
-		/**
-		 * Foot String
-		 * DirectionMoved:DirectionPointing:Type:DistanceMoved
-		 * DirectionMoved:   in { N,NE,E,SE,S,SW,W,NW,"" }
-		 * DirectionPointing:  in { N,NE,E,SE,S,SW,W,NW }
-		 * Type:(optional == "") in { F,T,H,"" } 
-		 * Distance: (optional == 1) in { 0,0.5,1,1.5,2 ...}
-		 */
-		function moveFoot(foot, move)
-		{
-			if (move == null) return copyFoot(foot);
-
-			var arr = move.split(":");
-			var dirMoved = DIR.fromCode(arr[0]);
-			var dp = (arr.length>1) ? DIR.fromCode(arr[1]) : DIR.NORTH;
-			var type = (arr.length>2) ? TYPE.fromCode(arr[2]) : TYPE.FLAT;
-			var dist = (arr.length>3) ? arr[3] : 1;
-			var newFoot = copyFoot(foot);
-			if (dirMoved != DIR.NONE)
-			{
-				newFoot.x = foot.x +dirMoved.offX*dist;
-				newFoot.y = foot.y +dirMoved.offY*dist;
-			}
-			newFoot.d = dp;
-			newFoot.t = type;
-			return newFoot;
-		}
-
-		function updateCorners(sqr)
-		{
-			var minX = Math.min(sqr.left.x, sqr.right.x);
-			var minY = Math.min(sqr.left.y, sqr.right.y);
-			var maxX = Math.max(sqr.left.x, sqr.right.x);
-			var maxY = Math.max(sqr.left.y, sqr.right.y);
-
-			if (minX == maxX) maxX+=1;
-			if (minY == maxY) minY-=1;
-			sqr.x = minX;
-			sqr.y = minY;
-			sqr.sz = { x: maxX-minX, y: maxY-minY };
-			label: "@("+minX+","+minY+") ["+sqr.sz.x+","+sqr.sz.y+"]";
-		}
-
-		/* Example
-		 * 
-		 * step({ name: "Opening the form", face: "N", left:"SW:N", right:"SW:N", desc: "Wu Chi"});
-		 * step({ right: "SE:N", desc: "Tai Chi" });
-         * step({ name: "Grasp the sparrows tail" );
-		 * step("", "0", "SW:N", "SE:NE", "Hanging 1");
-		 * step("", "0", "SW:N", "SE:NE", "Hanging 2");
-		 */
-
-		function step(obj)
-		{
-			var newSquare;
-			if (currentSquare == null)
-			{
-
-				newSquare = {"id": 0, "x": 0, "y": 0, "left": null, "right": null, label: "@(0,0) [1,1]"};
-				newSquare.left = newFoot(obj.leftStart);
-				newSquare.right = newFoot(obj.rightStart);
-			}
-			else
-			{
-				newSquare = copySquare(currentSquare);
-				newSquare.left = moveFoot(currentSquare.left, obj.left);
-				newSquare.right = moveFoot(currentSquare.right, obj.right);
-			}
-
-			if (obj.name != null) newSquare.name = obj.name;
-			newSquare.desc = obj.desc;
-
-			updateCorners(newSquare);
-			squares.push(newSquare);
-			currentSquare = newSquare;
-		}
-
-		function displayAll()
-		{
-			$("#contents").html("");
-			$("#contents").append("<div id='buttons' style='clear: both;'>" +
-					"<button class='button' id='showStep'>Show Single Step</button>"+
-					"</div>");
-			$("#showStep").click(function() { displayStep(); });
-
-			for (var i=0; i<squares.length; i++)
-			{
-				var id = "lform_"+i;
-				$("#contents").append("<div id='"+id+"'><div  style='clear: both;'><h3 class='title'>&nbsp;</h3></div></div>");
-				$("#"+id).append("<div style='float: left;'><div class='desc'>&nbsp;</div><div class='svg'></div></div>");
-				showStep(id, i);
-			}
-		}
-
-		function displayStep()
-		{
-			$("#contents").html("");
-			var id = "single";
-			$("#contents").append("<div id='"+id+"'><div  style='clear: both;'><h3 class='title'>&nbsp;</h3></div></div>");
-			$("#"+id).append("<div style='float: left;'><div class='desc'>&nbsp;</div><div class='svg'></div></div>");
-			
-
-			$("#"+id).append("<div id='buttons' style='clear: both;'>" +
-				"<button class='button' id='prevStep'>Previous</button>"+
-				"<button class='button' id='nextStep'>Next</button>"+
-				"<button class='button' id='runAll'>Run</button>"+
-				"<button class='button' id='showAll'>Show All</button>"+
-				"</div>");
-			$("#prevStep").click(function() { showStep(id, currentStep-1); });
-			$("#nextStep").click(function() { showStep(id, currentStep+1); });
-			$("#runAll").click(function() { runAll(0); });
-			$("#showAll").click(function() { displayAll(); });
-			
-			showStep(id, 0);
-		}
-
-		function runAll(step)
-		{
-			if (step<0) return;
-			if (step>=squares.length) return;
-			setTimeout(function() { runAll(step+1); }, 1000);
-			showStep("single", step);
-		}
-
-		function showStep(id, step)
-		{
-			if (step<0) return;
-			if (step>=squares.length) return;
-			currentStep = step;
-
-			$("#"+id+" div.svg").removeClass("hasSVG").html("");
-			$("#"+id+" div.svg").svg({onLoad: function(svg) { drawIntro(svg, id, step); } });
-		}
-
-		function addBoundingRect(svg, x, y, szX, szY, style)
-		{
-			console.log("Bounding Box: @("+x+","+y+") -> ["+szX+","+szY+"]");
-			svg.rect((x)*sqSize, (y)*sqSize, (szX)*sqSize+2*offset, (szY)*sqSize+2*offset, style);
-		}
-
-		function addSquare(svg, sqr, origin, style)
-		{
-			var x=sqr.x-origin.x;
-			var y=sqr.y-origin.y;
-			console.log("Form Square: ["+sqr.id+"] -> ("+x+","+y+")");
-			svg.rect(offset+x*sqSize, offset+(y)*sqSize, sqr.sz.x*sqSize, sqr.sz.y*sqSize, style);
-		}
-
-		function addFoot(svg, x, y, f, style)
-		{	
-			var cx = offset+(f.x-x)*sqSize;
-			var cy = offset+(f.y-y)*sqSize;
-			var s = jQuery.extend({}, style);
-			var deg = f.d.dir;
-
-
-
-			var s_h = jQuery.extend({}, style);
-			var s_t = jQuery.extend({}, style);
-
-			if (f.t == TYPE.HANGING_TOE)  s_h.fill="transparent";
-			if (f.t == TYPE.HANGING_HEAL) s_t.fill="transparent";
-
-			if (f.t != TYPE.FLOATING)
-			{
-				s_h.transform="translate("+cx+" "+cy+") rotate("+deg+") translate(0  3)";
-				s_t.transform="translate("+cx+" "+cy+") rotate("+deg+") translate(0 -3)";
-				svg.ellipse('','', 2, 3, s_h);
-				svg.ellipse('','', 2, 3, s_t);
-			}
-		}
-
-		function addLine(svg, x, y, l, r, style)
-		{
-			if (l.t != TYPE.FLOATING && r.t != TYPE.FLOATING)
-			{
-				console.log("Stance: ("+(l.x-x)+","+(l.y-y)+") => ("+(r.x-x)+","+(r.y-y)+")");
-				svg.line(offset+(l.x-x)*sqSize, offset+(l.y-y)*sqSize, offset+(r.x-x)*sqSize, offset+(r.y-y)*sqSize, style);
-			}
-			addFoot(svg, x, y, l, style);
-			var s = jQuery.extend({}, style);
-			s.fill=s.stroke="blue";
-			addFoot(svg, x, y, r, s);
-		}
-
-		function drawIntro(svg, id, step) { 
-			var min = { "x": null, "y": null};
-			var max = { "x": null, "y": null};
-			for (var i=0; i<squares.length; i++)
-			{
-				var cs = squares[i];
-				if (min.x==null || min.x>cs.x) min.x=cs.x;
-				if (min.y==null || min.y>cs.y) min.y=cs.y;
-				if (max.x==null || max.x<cs.x) max.x=cs.x;
-				if (max.y==null || max.y<cs.y) max.y=cs.y;
-			}
-			max.x=max.x+1;
-			max.y=max.y+1;
-
-			addBoundingRect(svg, 0, 0, max.x-min.x, max.y-min.y, {fill: 'none', stroke: 'blue', strokeWidth: 1});
-
-			for (var i=0; i<step; i++)
-			{
-				var cs = squares[i];
-				addSquare(svg, cs, min, {fill: 'lightgray', stroke: 'transparent', strokeWidth: 1});
-			}
-
-			for (var i=0; i<squares.length; i++)
-			{
-				var cs = squares[i];
-				addSquare(svg, cs, min, {fill: 'transparent', stroke: 'darkgray', strokeWidth: 1});
-			}
-
-			var s = squares[step];
-			addSquare(svg, s, min, {fill: 'lightgreen', stroke: 'darkgray', strokeWidth: 1});
-
-			addLine(svg, min.x, min.y, s.left, s.right,	{fill: 'red', stroke: 'red', strokeWidth: 1})
-			$("#"+id+" div.svg svg").css({"height": (max.y-min.y)*sqSize+2*offset, "width": (max.x-min.x)*sqSize+2*offset});
-			$("#"+id).css({ "width": (max.x-min.x)*sqSize+2*offset});
-
-			$("#"+id+" .title").html((s.name==null) ? "&nbsp;" : s.name);
-			$("#"+id+" .desc").html((s.desc==null) ? "&nbsp;" : s.desc);
-		}
-		/**
-		 * Foot String
-		 * DirectionMoved:DirectionPointing:Type:DistanceMoved
-		 * DirectionMoved:   in { N,NE,E,SE,S,SW,W,NW,"" }
-		 * DirectionPointing:  in { N,NE,E,SE,S,SW,W,NW }
-		 * Type:(optional == "") in { F,T,H,"" } 
-		 * Distance: (optional == 1) in { 0,0.5,1,1.5,2 ...}
-		 */
-		$( document ).ready(function() {
-			step({ name: "Opening the form", face: "N", leftStart:"SW:N:H", rightStart:"SW:N", desc: "Wu Chi"});
-			step({ right:"E:N", desc: "Tai Chi"});
-			step({ desc: "Heaven and Earth"});
-
-			step({ name: "Grasp the sparow's tail", desc: "Rotate hands up and to the left"});
-			step({ right: ":NE:H", desc: "Rotate hands down and to the right, drop"});
-
-			step({ name: "Ward off", left:"N:N", right:":NE", desc: "Step to Bo Stance"});
-			step({ desc: "Turn waist to left"});
-			step({ right:":E:T", desc: "Hanging Stance"});
-
-			step({ name: "1st Four powers", right:":E", desc: "Double Ward off : Step to Bo Stance"});
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-
-			step({ name: "Fishes and Eights", right:":NW", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
-
-			step({ name: "Single whip", left:"S:W:T:2", desc: "Hanging"});
-			step({ left:":W", desc: "Bo"});
-
-			step({ name: "Support the sky", left:":NW"});
-
-			step({ name: "2nd Four Powers", right: ":N:H", desc:"Pluck"});
-			step({ right: ":N", desc: "Shoulder"});
-			step({ desc: "Elbow"});
-			step({ desc: "Split"});
-
-			step({ name: "White Crane", left: ":W:T" });
-			step({ desc:"Turn to left" });
-			step({ desc: "Reach back to right" });
-
-			step({ name:"Brush knee, twist step (1)", left:":W" });
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
-			step({ left:":W:H", desc: "Hold the ball" });
-			step({ left:":SW:H", desc: "Reach back to left" });
-
-			step({ name:"Brush knee, twist step (2)", left:":SW", right:"W:W::2"});
-			step({ right:":W:H", desc: "Hold the ball" });
-			step({ right:":NW:H", desc: "Reach back to right" });
-
-			step({ name:"Brush knee, twist step (3)", right:":NW", left:"W:W::2"});
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
-
-			step({ name:"TPP", left:":SW:H", desc: "Rollback" });
-			step({ left:":SW", right:"W:W::2", desc: "Backfist" });
-			step({ right:":NW", left:"W:W::2", desc: "Punch" });
-			step({ right:":NW", desc: "Seperate hands" });
-			step({ right:":NW", desc: "Press" });
-
-			step({ left:":N", desc: "Snake" });
-			step({ right:"S:N", desc: "Tai Chi" });
-
-			step({ name:"Carry the tiger and return to the mountain", left:":E", desc: "Snake"});
-			step({ desc: "Reach back" });
-			step({ right: "SW:SE", desc: "Brush Knee(Bo Stance to SE)" });
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-			
-	
-			step({ name: "Fishes and Eights", right:":N", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
-			step({ name: "Push the mountain", right:":N", desc: "Turn (Snake)"});
-			step({ left: "W:NW:H", desc: "Hanging stance"});
-			step({ right: "N:NW::2", left: ":NW", desc: "Tai Chi"});
-
-			step({ name: "Fist under the elbow", left:":W:H", desc: "Hanging stance"});
-
-			step({ name: "Back stepping monkey (1)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-
-			step({ name: "Back stepping monkey (2)", desc: "Support the sky" });
-			step({ right: "E:NW::2", left:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (3)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (4)", desc: "Support the sky" });
-			step({ right: "E:NW::2", left:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (5)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-
-			step({ desc: "Seperate the hands obliquely" });
-			step({ desc: "Hold the ball (looking North)" });
-			step({ right: "E:N:T:2", desc: "Hanging stance" });
-			step({ right: ":N", left: ":NW", desc: "Part the wild horses mane" });
-
-			step({ name: "2nd Four Powers", right: ":N:H", desc:"Pluck"});
-			step({ right: ":N", desc: "Shoulder"});
-			step({ desc: "Elbow"});
-			step({ desc: "Split"});
-
-			
-			step({ name: "White Crane", left: ":W:T" });
-			step({ desc:"Turn to left" });
-			step({ desc: "Reach back to right" });
-
-			step({ name:"Pluck the needle", left:":W" });
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
-			step({ left:":W:T", desc: "Pluck the needle" });
-			step({ left:":W", desc: "Fan through the back" });
-
-
-			step({ name:"Yin yang hands", left:":NE" , desc: "Snake"});
-			step({ right:"S:W::2" , desc: "Step"});
-			step({  desc: "Rollback"});
-			step({  right: "::F", desc: "Backfist and kick"});
-			step({  left: "E:E::2", right: ":SE", desc: "Punch"});
-			step({  desc: "Seperate the hands obliquely"});
-			step({  left: "W:N:T:2", desc: "Hold the ball"});
-
-
-			step({ name: "Ward off", left:":N", right:":NE", desc: "Step to Bo Stance"});
-
-			step({ desc: "Turn waist to left"});
-			step({ right:":E:T", desc: "Hanging Stance"});
-
-			step({ name: "1st Four powers", right:":E", desc: "Double Ward off : Step to Bo Stance"});
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-
-			step({ name: "Fishes and Eights", right:":NW", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
-
-			step({ name: "Single whip", left:"S:W:T:2", desc: "Hanging"});
-			step({ left:":W", desc: "Bo"});
-
-			step({ name: "Cloud Hands", left:":N", desc: "Snake"});
-			step({ right:"S:N", desc: "Step back"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-
-
-			step({ desc: "Prepare Crane's beak"});
-			step({ name: "Single whip", left:"S:W:T", desc: "Hanging"});
-			step({ left:":W", right: ":NW", desc: "Bo"});
-
-			displayStep();
-		});
-			</script>
+		<h2>Forms</h2>
+		<ul>
+			<li><a href="short.html">Short form</a></li>
+			<li><a href="long.html">Long form</a></li>
+			<li><a href="broadsword.html">Broadsword form</a></li>
+			<li><a href="fan.html">Fan form</a></li>
+			<li><a href="narrowsowrd.html">Narrow sword form</a></li
+			<li><a href="2fan.html">Two person fan form</a></li
+			<li><a href="63.html">63 step form</a></li>
+		</ul>
 	<div id="contents">
 	</div>
 	</body>
