Updated Long form to include 1st and 2nd section (as well as I know it)

--- a/long.html
+++ b/long.html
@@ -21,182 +21,184 @@
 		 */
 		$( document ).ready(function() {
 			step({ name: "Opening the form", face: "N", leftStart:"SW:N", rightStart:"SW:N", desc: "Wu Chi"});
-			step({ right:"E:N", desc: "Tai Chi"});
-			step({ desc: "Heaven and Earth"});
-
-			step({ name: "Grasp the sparow's tail", desc: "Rotate hands up and to the left"});
-			step({ right: ":NE:H", desc: "Rotate hands down and to the right, drop"});
-
-			step({ name: "Ward off", left:"N:N", right:":NE", desc: "Step to Bo Stance"});
-			step({ desc: "Turn waist to left"});
-			step({ right:":E:T", desc: "Hanging Stance"});
-
-			step({ name: "1st Four powers", right:":E", desc: "Double Ward off : Step to Bo Stance"});
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-
+				step({ right:"E:N", desc: "Tai Chi"});
+				step({ desc: "Heaven and Earth"});
+			step({ name: "Grasp the sparow's tail (left)", desc: "Rotate hands up and to the left"});
+				step({ right: ":NE:H", desc: "Rotate hands down and to the right, drop"});
+				step({ left:"N:N", right:":NE", desc: "Step to Bo Stance"});
+				step({ desc: "Turn waist to left"});
+				step({ right:":E:T", desc: "Hanging Stance"});
+			step({ name: "Grasp the sparow's tail (right)", left: ":NE", right:":E", desc: "Double Ward off : Step to Bo Stance"});
+				step({ desc: "Rollback"});
+				step({ desc: "Press"});
+				step({ desc: "Push"});
 			step({ name: "Fishes and Eights", right:":NW", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
-
+				step({ desc: "Shift"});
+				step({ desc: "Shift back"});
+				step({ desc: "Turn back"});
+				step({ desc: "Prepare Crane's beak"});
 			step({ name: "Single whip", left:"S:W:T:2", desc: "Hanging"});
-			step({ left:":W", desc: "Bo"});
-
-			step({ name: "Support the sky", left:":NW"});
-
+				step({ left:":W", desc: "Bo"});
+			step({ name: "Support the sky ??", left:":NW"});
 			step({ name: "2nd Four Powers", right: ":N:H", desc:"Pluck"});
-			step({ right: ":N", desc: "Shoulder"});
-			step({ desc: "Elbow"});
-			step({ desc: "Split"});
-
-			step({ name: "White Crane", left: ":W:T" });
-			step({ desc:"Turn to left" });
-			step({ desc: "Reach back to right" });
-
+				step({ right: ":N", desc: "Shoulder"});
+				step({ desc: "Elbow"});
+				step({ desc: "Split"});
+			step({ name: "White Crane spreads its wings", left: ":W:T" });
+				step({ desc:"Turn to left" });
+				step({ desc: "Reach back to right" });
 			step({ name:"Brush knee, twist step (1)", left:":W" });
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
-			step({ left:":W:H", desc: "Hold the ball" });
-			step({ left:":SW:H", desc: "Reach back to left" });
-
+				step({ right:"SW:W:T", desc: "Step up" });
+				step({ right:"NE:NW", desc: "Step back" });
+				step({ left:":W:H", desc: "Hold the ball" });
+				step({ left:":SW:H", desc: "Reach back to left" });
 			step({ name:"Brush knee, twist step (2)", left:":SW", right:"W:W::2"});
-			step({ right:":W:H", desc: "Hold the ball" });
-			step({ right:":NW:H", desc: "Reach back to right" });
-
+				step({ right:":W:H", desc: "Hold the ball" });
+				step({ right:":NW:H", desc: "Reach back to right" });
 			step({ name:"Brush knee, twist step (3)", right:":NW", left:"W:W::2"});
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
+				step({ right:"SW:W:T", desc: "Step up" });
+				step({ right:"NE:NW", desc: "Step back" });
+			step({ name:"?? and Parry Down", left:":SW:H", desc: "Rollback" });
+				step({ left:":SW", right:"W:W::2", desc: "Backfist" });
+				step({ right:":NW", left:"W:W::2", desc: "Punch" });
+				step({ right:":NW", desc: "Seperate hands" });
+				step({ right:":NW", desc: "Push" });	
+			step({ name: "?? Tai Chi", left:":N", desc: "Snake" });
+				step({ right:"S:N", desc: "Tai Chi" });
 
-			step({ name:"TPP", left:":SW:H", desc: "Rollback" });
-			step({ left:":SW", right:"W:W::2", desc: "Backfist" });
-			step({ right:":NW", left:"W:W::2", desc: "Punch" });
-			step({ right:":NW", desc: "Seperate hands" });
-			step({ right:":NW", desc: "Press" });
-
-			step({ left:":N", desc: "Snake" });
-			step({ right:"S:N", desc: "Tai Chi" });
-
+			/** Second Section */
 			step({ name:"Carry the tiger and return to the mountain", left:":E", desc: "Snake"});
-			step({ desc: "Reach back" });
-			step({ right: "SW:SE", desc: "Brush Knee(Bo Stance to SE)" });
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-			
-	
+				step({ desc: "Reach back" });
+				step({ right: "SW:SE", desc: "Brush Knee(Bo Stance to SE)" });
+				step({ desc: "Rollback"});
+				step({ desc: "Press"});
+				step({ desc: "Push"});	
 			step({ name: "Fishes and Eights", right:":N", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
+				step({ desc: "Shift"});
+				step({ desc: "Shift back"});
+				step({ desc: "Turn back"});
+				step({ desc: "Prepare Crane's beak"});
 			step({ name: "Push the mountain", right:":N", desc: "Turn (Snake)"});
-			step({ left: "W:NW:H", desc: "Hanging stance"});
-			step({ right: "N:NW::2", left: ":NW", desc: "Tai Chi"});
-
+				step({ left: "W:NW:H", desc: "Hanging stance"});
+				step({ right: "N:NW::2", left: ":NW", desc: "Tai Chi"});
 			step({ name: "Fist under the elbow", left:":W:H", desc: "Hanging stance"});
-
-			step({ name: "Back stepping monkey (1)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-
-			step({ name: "Back stepping monkey (2)", desc: "Support the sky" });
-			step({ right: "E:NW::2", left:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (3)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (4)", desc: "Support the sky" });
-			step({ right: "E:NW::2", left:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-			step({ name: "Back stepping monkey (5)", left: ":W", desc: "Support the sky" });
-			step({ left: "E:SW::2", right:":W", desc: "Step back" });
-			step({ desc: "Turn back" });
-
-			step({ desc: "Seperate the hands obliquely" });
-			step({ desc: "Hold the ball (looking North)" });
-			step({ right: "E:N:T:2", desc: "Hanging stance" });
-			step({ right: ":N", left: ":NW", desc: "Part the wild horses mane" });
-
+			step({ name: "Step back and repulse the monkey (1)", left: ":W", desc: "Support the sky" });
+				step({ left: "E:SW::2", right:":W", desc: "Step back" });
+				step({ desc: "Turn back" });
+			step({ name: "Step back and repulse the monkey (2)", desc: "Support the sky" });
+				step({ right: "E:NW::2", left:":W", desc: "Step back" });
+				step({ desc: "Turn back" });
+			step({ name: "Step back and repulse the monkey (3)", left: ":W", desc: "Support the sky" });
+				step({ left: "E:SW::2", right:":W", desc: "Step back" });
+				step({ desc: "Turn back" });
+			step({ name: "Step back and repulse the monkey (4)", desc: "Support the sky" });
+				step({ right: "E:NW::2", left:":W", desc: "Step back" });
+				step({ desc: "Turn back" });
+			step({ name: "Step back and repulse the monkey (5)", left: ":W", desc: "Support the sky" });
+				step({ left: "E:SW::2", right:":W", desc: "Step back" });
+				step({ desc: "Turn back" });
+				step({ desc: "Seperate the hands obliquely" });
+				step({ desc: "Hold the ball (looking North)" });
+				step({ right: "E:N:T:2", desc: "Hanging stance" });
+				step({ right: ":N", left: ":NW", desc: "Part the wild horses mane" });
 			step({ name: "2nd Four Powers", right: ":N:H", desc:"Pluck"});
-			step({ right: ":N", desc: "Shoulder"});
-			step({ desc: "Elbow"});
-			step({ desc: "Split"});
-
-			
-			step({ name: "White Crane", left: ":W:T" });
-			step({ desc:"Turn to left" });
-			step({ desc: "Reach back to right" });
-
-			step({ name:"Pluck the needle", left:":W" });
-			step({ right:"SW:W:T", desc: "Step up" });
-			step({ right:"NE:NW", desc: "Step back" });
-			step({ left:":W:T", desc: "Pluck the needle" });
-			step({ left:":W", desc: "Fan through the back" });
-
-
+				step({ right: ":N", desc: "Shoulder"});
+				step({ desc: "Elbow"});
+				step({ desc: "Split"});			
+			step({ name: "White Crane spreads its wings", left: ":W:T" });
+				step({ desc:"Turn to left" });
+				step({ desc: "Reach back to right" });
+			step({ name:"Pluck the needle from the bottom of the ocean", left:":W" });
+				step({ right:"SW:W:T", desc: "Step up" });
+				step({ right:"NE:NW", desc: "Step back" });
+				step({ left:":W:T", desc: "Pluck the needle" });
+			step({ name: "Fan through the back", left:":W", desc: "Fan through the back" });
 			step({ name:"Yin yang hands", left:":NE" , desc: "Snake"});
-			step({ right:"S:W::2" , desc: "Step"});
-			step({  desc: "Rollback"});
-			step({  right: "::F", desc: "Backfist and kick"});
-			step({  left: "E:E::2", right: ":SE", desc: "Punch"});
-			step({  desc: "Seperate the hands obliquely"});
-			step({  left: "W:N:T:2", desc: "Hold the ball"});
-
-
-			step({ name: "Ward off", left:":N", right:":NE", desc: "Step to Bo Stance"});
-
-			step({ desc: "Turn waist to left"});
-			step({ right:":E:T", desc: "Hanging Stance"});
-
-			step({ name: "1st Four powers", right:":E", desc: "Double Ward off : Step to Bo Stance"});
-			step({ desc: "Rollback"});
-			step({ desc: "Press"});
-			step({ desc: "Push"});
-
+				step({ right:"S:W::2" , desc: "Step"});
+			step({ name:"?? Parry and Kick",  desc: "Rollback"});
+				step({  right: "::F", desc: "Backfist and kick"});
+				step({  left: "E:E::2", right: ":SE", desc: "Punch"});
+				step({  desc: "Seperate the hands obliquely"});
+				step({  left: "W:N:T:2", desc: "Hold the ball"});
+			step({ name: "Grasp the sparow's tail (left)", left:":N", right:":NE", desc: "Ward off"});
+				step({ desc: "Turn waist to left"});
+				step({ right:":E:T", desc: "Hanging Stance"});
+			step({ name: "Grasp the sparow's tail (right)", right:":E", desc: "Double Ward off : Step to Bo Stance"});
+				step({ desc: "Rollback"});
+				step({ desc: "Press"});
+				step({ desc: "Push"});
 			step({ name: "Fishes and Eights", right:":NW", desc: "Turn (Snake)"});
-			step({ desc: "Shift"});
-			step({ desc: "Shift back"});
-			step({ desc: "Turn back"});
-			step({ desc: "Prepare Crane's beak"});
-
-
+				step({ desc: "Shift"});
+				step({ desc: "Shift back"});
+				step({ desc: "Turn back"});
+				step({ desc: "Prepare Crane's beak"});
 			step({ name: "Single whip", left:"S:W:T:2", desc: "Hanging"});
-			step({ left:":W", desc: "Bo"});
-
-			step({ name: "Cloud Hands", left:":N", desc: "Snake"});
-			step({ right:"S:N", desc: "Step back"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-			step({ desc: "Push right"});
-			step({ desc: "Push left"});
-			step({ left: "W:N::0.5", desc: "Step out"});
-			step({ right: "W:N::0.5", desc: "Step in"});
-
-
-			step({ desc: "Prepare Crane's beak"});
+				step({ left:":W", desc: "Bo"});
+			step({ name: "Wave hands like clouds", left:":N", desc: "Snake"});
+				step({ right:"S:N", desc: "Step back"});
+				step({ desc: "Push right"});
+				step({ desc: "Push left"});
+				step({ left: "W:N::0.5", desc: "Step out"});
+				step({ right: "W:N::0.5", desc: "Step in"});
+				step({ desc: "Push right"});
+				step({ desc: "Push left"});
+				step({ left: "W:N::0.5", desc: "Step out"});
+				step({ right: "W:N::0.5", desc: "Step in"});
+				step({ desc: "Push right"});
+				step({ desc: "Push left"});
+				step({ left: "W:N::0.5", desc: "Step out"});
+				step({ right: "W:N::0.5", desc: "Step in"});
+				step({ desc: "Push right"});
+				step({ desc: "Push left"});
+				step({ left: "W:N::0.5", desc: "Step out"});
+				step({ right: "W:N::0.5", desc: "Step in"});
+				step({ desc: "Push right"});
+				step({ desc: "Push left"});
+				step({ left: "W:N::0.5", desc: "Step out"});
+				step({ right: "W:N::0.5", desc: "Step in"});
+				step({ desc: "Prepare Crane's beak"});
 			step({ name: "Single whip", left:"S:W:T", desc: "Hanging"});
-			step({ left:":W", right: ":NW", desc: "Bo"});
+				step({ left:":W", right: ":NW", desc: "Bo"});
+			step({ name: "Mount the horse", right: "W:NW::0.5", left: ":W:T"});
+			step({ name: "??Jade lady", left: "W:SW::0.5"});
+			step({ name: "??Flat kick", right: "W::F:2"});
+			step({ name: "??Jade lady 2nd section", right: ":NW"});
+			step({ name: "??Flat kick", left: "W::F:2"});
+			step({ name: "Streach the heal", right: ":SE", left: "NE::F:2", desc: 'Spin 180 anticlockwise'});
+				step({ desc: "Reach back"});
+			step({ name: "Brush Knee", left: ":E"});
+				step({ left: ":NE:H", desc: "Reach back"});
+			step({ name: "Punch and grab the hem", left: ":NE", right: "E:E::2"});
+				step({ right: ":SE:", desc: "Grab Hem - do not remmber hanging stance here"});
+			step({ name: "Punch down", left: "E:E::2", desc: "Punch to Dantien" });
+			step({ name:"Yin yang hands", left:":SW" , desc: "Snake"});
+				step({ right:"N:W::2" , desc: "Step"});
+				step({ right:":W:H", desc: "Hold ball to West"});
 
-			displaySummary();
+			step({ name: "Slant fly", right:":W", left: "W:SW::1", desc: "to SW"});
+			step({ name: "A symmetric Box the tigers ears SE", left: ":N", desc:"Snake"});
+				step({ left: ":E", right: "S:SE::2", desc: "Stike Right hand high"});
+			step({ name: "A symmetric Box the tigers ears NW", right: ":N", desc:"Snake"});
+				step({ left: ":W", right: "N:NW::2", desc: "Stike Left hand high"});
+			step({ name: "A symmetric Box the tigers ears SE", left: ":N", desc:"Snake"});
+				step({ left: ":E", right: "S:SE::2", desc: "Stike Right hand high"});
+			step({ name: "Slant fly", right:":N",  desc: "Snake"});
+				step({ right:":W", left: "S:SW::2", desc: "Slant fly to SW"});
+			step({ name: "Box the tiger's ears", right:":NW", left: ":W", desc: "Slant fly to SW"});
+				step({ name: "Yang circle", left: ":NE:T", right:":N" })
+			step({ name: "Stretch the Heal", left: "N:N:F:2", right:":N" });
+				step({ left: "SE:NE", right:":N:T", desc: "Lady stance - facing NE" });
+			/* Something goes wrong here : Need to ask Matt */
+			step({ name: "Play the guitar", right: ":W:H", left: ":SW", desc: "Spin clockwise to W"})
+			step({ name: "?? Parry and Kick", right: "::F", desc: "Backfist and kick"});
+				step({ right:"N:NW:H", desc: "Transition step" });
+				step({ right:":NW", left:"W:W::2", desc: "Punch" });
+				step({ right:":NW", desc: "Seperate hands" });
+				step({ right:":NW", desc: "Press" });
+
+			step({ name: "?? Tai Chi", left:":N", desc: "Snake" });
+				step({ right:"S:N", desc: "Tai Chi" });
+			displayStep();
 		});
 			</script>
 	<div id="contents">
