Short form Stances working - may need testing

--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
 	<body>
 		<h2>Forms</h2>
 		<ul>
-			<li><a href="short.html">Short form</a></li>
-			<li><a href="long.html">Long form</a></li>
-			<li><a href="broadsword.html">Broadsword form</a></li>
-			<li><a href="fan.html">Fan form</a></li>
-			<li><a href="narrowsowrd.html">Narrow sword form</a></li
-			<li><a href="2fan.html">Two person fan form</a></li
-			<li><a href="63.html">63 step form</a></li>
+			<li><a href="form.html?form=short">Short form</a></li>
 		</ul>
 	<div id="contents">
 	</div>
